entity settings and registrations

--- a/src/Presentation/TradeEdutify.API/appsettings.Development.json
+++ b/src/Presentation/TradeEdutify.API/appsettings.Development.json
@@ -1,8 +1,5 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Port=5432;Database=TradeEdutify;User Id=k2m;Password=Tr549522**;CommandTimeout=0"
   }
 }
