--- a/src/Infrastructure/TradeEdutify.Persistence/TradeEdutify.Persistence.csproj
+++ b/src/Infrastructure/TradeEdutify.Persistence/TradeEdutify.Persistence.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Core\TradeEdutify.Domain\TradeEdutify.Domain.csproj" />
+    <ProjectReference Include="..\..\Presentation\TradeEdutify.API\TradeEdutify.API.csproj" />
   </ItemGroup>
 
 </Project>
