--- a/src/Presentation/TradeEdutify.API/TradeEdutify.API.csproj
+++ b/src/Presentation/TradeEdutify.API/TradeEdutify.API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -18,5 +18,9 @@
   <ItemGroup>
     <Folder Include="Controllers\" />
   </ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\..\Infrastructure\TradeEdutify.Persistence\TradeEdutify.Persistence.csproj" />
+	</ItemGroup>
 
 </Project>
