Validations, Dtos, Mappers

--- a/src/Presentation/TradeEdutify.API/TradeEdutify.API.csproj
+++ b/src/Presentation/TradeEdutify.API/TradeEdutify.API.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\..\Core\TradeEdutify.Application\TradeEdutify.Application.csproj" />
 		<ProjectReference Include="..\..\Infrastructure\TradeEdutify.Persistence\TradeEdutify.Persistence.csproj" />
 	</ItemGroup>
 
