Repository registration and interfaces

--- a/src/Infrastructure/TradeEdutify.Persistence/TradeEdutify.Persistence.csproj
+++ b/src/Infrastructure/TradeEdutify.Persistence/TradeEdutify.Persistence.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Core\TradeEdutify.Application\TradeEdutify.Application.csproj" />
     <ProjectReference Include="..\..\Core\TradeEdutify.Domain\TradeEdutify.Domain.csproj" />
   </ItemGroup>
 
