Default Settings for entities, example migrate data, Migrations operations

--- a/src/Presentation/TradeEdutify.API/appsettings.Development.json
+++ b/src/Presentation/TradeEdutify.API/appsettings.Development.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=5432;Database=TradeEdutify;User Id=k2m;Password=Tr549522**;CommandTimeout=0"
+    "DefaultConnection": "Server=localhost;Port=5432;Database=TradeEdutifyV2;User Id=k2m;Password=Tr549522**;CommandTimeout=0"
   }
 }
