--- a/src/Infrastructure/TradeEdutify.Persistence/TradeEdutify.Persistence.csproj
+++ b/src/Infrastructure/TradeEdutify.Persistence/TradeEdutify.Persistence.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\..\Core\TradeEdutify.Domain\TradeEdutify.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
