--- a/src/Core/TradeEdutify.Application/TradeEdutify.Application.csproj
+++ b/src/Core/TradeEdutify.Application/TradeEdutify.Application.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="MediatR" Version="12.2.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="8.0.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.33.0" />
   </ItemGroup>
 
   <ItemGroup>
