--- a/src/Presentation/TradeEdutify.API/appsettings.Development.json
+++ b/src/Presentation/TradeEdutify.API/appsettings.Development.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=5432;Database=TradeEdutifyV2;User Id=k2m;Password=Tr549522**;CommandTimeout=0"
+    "DefaultConnection": "Server='';Port='';Database=TradeEdutify;User Id='';Password='';CommandTimeout=0"
   }
 }
