--- a/src/Presentation/TradeEdutify.API/appsettings.json
+++ b/src/Presentation/TradeEdutify.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=5432;Database=TradeEdutify;User Id=k2m;Password=Tr549522**;CommandTimeout=0"
+    "DefaultConnection": "Server='';Port='';Database=TradeEdutify;User Id='';Password='';CommandTimeout=0"
   }
 }
