framework upgrade completed.

--- a/src/Presentation/TradeEdutify.API/appsettings.Development.json
+++ b/src/Presentation/TradeEdutify.API/appsettings.Development.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server='';Port='';Database=TradeEdutify;User Id='';Password='';CommandTimeout=0"
+    "DefaultConnection": "Server='localhost';Port='5432';Database=TradeEdutify;User Id='postgres';Password='12345';CommandTimeout=0"
   }
 }
