dockerized project completed.

--- a/src/Presentation/TradeEdutify.API/appsettings.json
+++ b/src/Presentation/TradeEdutify.API/appsettings.json
@@ -1,9 +1,5 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "DefaultConnection": "Host='172.17.0.4';Port='5432';Database=TradeEdutify;User Id='postgres';Password='12345';CommandTimeout=0"
+  }
 }
