--- a/src/Presentation/TradeEdutify.API/appsettings.json
+++ b/src/Presentation/TradeEdutify.API/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host='172.17.0.4';Port='5432';Database=TradeEdutify;User Id='postgres';Password='12345';CommandTimeout=0"
+    "DefaultConnection": "Host='';Port='';Database=TradeEdutify;User Id='';Password='';CommandTimeout=0"
   }
 }
