--- a/.gitignore
+++ b/.gitignore
@@ -363,3 +363,5 @@ MigrationBackup/
 FodyWeavers.xsd
 /appsettings.json
 /appsettings.Development.json
+src/Presentation/TradeEdutify.API/appsettings.Development.json
+src/Presentation/TradeEdutify.API/appsettings.Development.json
