--- a/.gitignore
+++ b/.gitignore
@@ -365,3 +365,5 @@ FodyWeavers.xsd
 /appsettings.Development.json
 src/Presentation/TradeEdutify.API/appsettings.Development.json
 src/Presentation/TradeEdutify.API/appsettings.Development.json
+/src/Presentation/TradeEdutify.API/appsettings.json
+/src/Presentation/TradeEdutify.API/appsettings.Development.json
